@@ -1,7 +1,11 @@
 Changes between 1.1.2 and 1.1.1
 =====================================
 
+- install 'py.test' and `py.which` with a ``-$VERSION`` suffix to
+  disambiguate between Python3, python2.X, Jython and PyPy installed versions. 
+
 - fix assert reinterpreation that sees a call containing "keyword=..."
+
 - skip some install-tests if no execnet is available
 
 Changes between 1.1.1 and 1.1.0
